--- a/TODO.html
+++ b/TODO.html
@@ -1,5 +1,5 @@
 
-Забрати кому в ціні.
+<!-- Забрати кому в ціні. -->
 В блоці пошуку зробити маркер місця активним при обраному місті відправлення чи призначення.
 Пофіксити скидання опцій товару при редагуванні.
 Зміна ціни в залежності від кількості.
