edit account page

--- a/TODO.html
+++ b/TODO.html
@@ -4,4 +4,5 @@
 Пофіксити скидання опцій товару при редагуванні.
 Зміна ціни в залежності від кількості.
 Повноцінна галерея зображень.
-В особистому кабінеті добавити посилання на сторінку чекауту.
+<!-- В особистому кабінеті добавити посилання на сторінку чекауту. -->
+Додати google analitics.
