edit manufacturer pege

--- a/TODO.html
+++ b/TODO.html
@@ -5,4 +5,4 @@
 <!-- Зміна ціни в залежності від кількості. -->
 Повноцінна галерея зображень.
 <!-- В особистому кабінеті добавити посилання на сторінку чекауту. -->
-Додати google analitics.
+<!-- Додати google analitics. -->
